Fixed minor logo location misalignment

--- a/style.css
+++ b/style.css
@@ -87,11 +87,15 @@ footer i{
     color: var(--accent);
 }
 
-nav li, .logo{
+nav li{
     padding: 1rem 0.5rem;
     margin: 0.5rem;
 }
 
+.logo{
+    padding: 1rem 0.5rem;
+    margin: 0.5rem 0.5rem 0.5rem 2rem;
+}
 .logo_insert{
     margin-top: 1.8rem;
 }
